tests/ui/generic-associated-types/issue-87258_a.stderr
error: method must define opaque type
  --> $DIR/issue-87258_a.rs:17:26
   |
LL |     type FooFuture<'a> = impl Trait1;
   |                          ^^^^^^^^^^^
LL |
LL |     fn foo<'a>() -> Self::FooFuture<'a> {
   |     ----------------------------------- because it shows up in the args of this method

error: unconstrained opaque type
  --> $DIR/issue-87258_a.rs:17:26
   |
LL |     type FooFuture<'a> = impl Trait1;
   |                          ^^^^^^^^^^^
   |
   = note: `FooFuture` must be used in combination with a concrete type within the same impl

error: aborting due to 2 previous errors

